# teachee

./: .gitignore  .gitmodules  .svlint.toml  README.md
.github/workflows/: check-tauri-app.yml  check-teachee-desktop.yml  rtl.yml  svlint.yml
hardware/: .gitignore  README.md
hardware/TeachEE/: ADC.SchDoc  AFE.SchDoc  AFE_DIFF.SchDoc  CONNECTORS.SchDoc  CURRENT_MONITOR.SchDoc  FPGA_MODULE.Harness  FPGA_MODULE.SchDoc  PCB.PcbDoc  POWER.SchDoc  TOP.SchDoc  TeachEE.OutJob  TeachEE.PrjPcb  TeachEE_ASSY_Notes.PCBDwf  USB_FIFO.Harness  USB_FIFO.SchDoc
hardware/Vendor Communications/: Bittele_Initial_DFM_Check_Report_8013074A1_2022-10-27_Answers.xls
hardware/cad/: README.md  teachee_enclosure.f3z  teachee_enclosure_bottom.stl  teachee_enclosure_top.stl  teachee_tray.f3d  teachee_tray.f3z
misc/: README.md  TeachEE-System-Diagram  sequence_diagram.drawio
new_rtl/axis/: axis_io.sv
new_rtl/ip/: README.md
new_rtl/testbenches/: README.md
reports/: .gitignore  README.md  bom.tex
reports/SupervisorAgreement/: ELEC390_SupervisorAgreement_Group7_SW.docx  ELEC390_SupervisorAgreement_Group7_TD.docx  Team7_Supervisor_Agreement.docx
reports/blueprint/: bom.tex  (+2 more)
rtl/: .gitignore  README.md  cmod-a7-35t.xdc  run_tb.tcl  teachee_defs.sv
software/: README.md
software/teachee-desktop/: Cargo.toml  README.md
software/teachee-desktop/src/: app.rs  controller.rs  lib.rs  main.rs  storage.rs  usb_manager.rs
software/teachee-desktop/src/sample_source/: ft.rs  mod.rs  sine.rs
software/teachee-desktop/xtask/: Cargo.toml
software/teachee-desktop/xtask/src/: main.rs
(+145 files in other folders)
