[package]
name = "teachee-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.20.1"
libftd2xx = "0.32.1"
structopt = "0.3.26"
csv = "1.2.1"

[target.'cfg(any(windows,linux))'.dependencies.libftd2xx]
version = "0.32.1"
features = ["static"]

[target.'cfg(macos)'.dependencies.libftd2xx]
version = "0.32.1"

[features]
default = []
window_trigger = []
static = ["libftd2xx/static"]

[workspace]
members = [
    ".",
    "xtask",
]
